Creating triades branch

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/carlos23001/anaconda3/envs/ic_bioinfo/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/carlos23001/anaconda3/envs/ic_imuno/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -645,13 +645,13 @@
    "source": [
     "args = argparse.Namespace(\n",
     "    folder_path='pdb_input',\n",
-    "    files_name='chikv_H_6NK5_clean.pdb,mayv_M_7KO8_clean.pdb',\n",
+    "    files_name='pmhc_titin_5bs0_renumber.pdb,pmhc_mage3_5brz_renumber.pdb',\n",
     "    reference_graph=None,\n",
     "    centroid_threshold=10,\n",
     "    run_name='test_with_angle',\n",
     "    association_mode='identity',\n",
-    "    output_path='data/tests_with_angle',\n",
-    "    neighbor_similarity_cutoff=0.7,\n",
+    "    output_path='data/tests_distances',\n",
+    "    neighbor_similarity_cutoff=0.8,\n",
     "    residues_similarity_cutoff=0.8,\n",
     "    factors_path='resources/atchley_aa.csv',\n",
     "    rsa_filter=0.1,\n",
@@ -661,7 +661,6 @@
     "    serd_config=None,\n",
     "    debug=True,\n",
     "    angle_diff=20.0,\n",
-    "    check_angles=True,\n",
     "    check_rsa=True,\n",
     "    check_depth=True,\n",
     "    check_neighbors=True\n",
@@ -4684,9 +4683,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ic_bioinfo",
+   "display_name": "ic_imuno",
    "language": "python",
-   "name": "ic_bioinfo"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4698,7 +4697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
