--- a/tests.ipynb
+++ b/tests.ipynb
@@ -4675,7 +4675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4684,7 +4684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4694,45 +4694,100 @@
     "\n",
     "    nodes = data[graph][\"frames\"][frame][\"nodes\"]\n",
     "\n",
-    "    selecao_1 = set()\n",
-    "    selecao_2 = set()\n",
+    "    # Determina o número de posições baseado no primeiro nó válido\n",
+    "    for par in nodes:\n",
+    "        if isinstance(par, list):\n",
+    "            n = len(par)\n",
+    "            break\n",
+    "    else:\n",
+    "        return []\n",
+    "\n",
+    "    selecoes = [set() for _ in range(n)]\n",
     "\n",
     "    for par in nodes:\n",
-    "        if not isinstance(par, list) or len(par) != 2:\n",
+    "        if not isinstance(par, list) or len(par) != n:\n",
     "            continue\n",
-    "        lado_1, lado_2 = par\n",
-    "        \n",
-    "        # lado_1 é tipo \"L:TRP:170\"\n",
-    "        cadeia1, _, res1 = lado_1.split(\":\")\n",
-    "        cadeia2, _, res2 = lado_2.split(\":\")\n",
     "\n",
-    "        selecao_1.add(f\"/{cadeia1}:{res1}\")\n",
-    "        selecao_2.add(f\"/{cadeia2}:{res2}\")\n",
+    "        for i, lado in enumerate(par):\n",
+    "            try:\n",
+    "                cadeia, _, res = lado.split(\":\")\n",
+    "                selecoes[i].add(f\"/{cadeia}:{res}\")\n",
+    "            except ValueError:\n",
+    "                continue\n",
     "\n",
-    "    comando_1 = \"sel #1\" + \"\".join(sorted(selecao_1))\n",
-    "    comando_2 = \"sel #2\" + \"\".join(sorted(selecao_2))\n",
+    "    comandos = [f\"sel #{i+1}\" + \"\".join(sorted(selecao)) for i, selecao in enumerate(selecoes)]\n",
     "\n",
-    "    return comando_1, comando_2"
+    "    return comandos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sel #1/L:109/L:212/L:214/L:216/L:223/L:224/L:225/L:226/L:230/L:231/L:232/L:233/L:53/L:54/L:56/L:59/L:61/L:62/L:63/L:64/L:65/L:66/L:67/L:68/L:74/L:76/L:78/L:80/L:82/L:83/L:84/L:85/L:87/L:88/L:91/L:93/L:95/L:96/L:99/M:108/M:109/M:136/M:137/M:138/M:140/M:141/M:145/M:148/M:150/M:151/M:152/M:154/M:155/M:161/M:171/M:172/M:173/M:174/M:177/M:178/M:236/M:240/M:242/M:244/M:245/M:246/M:259/M:260/M:262/M:263/M:264/M:265/M:266/M:268/M:290/M:291/M:307/M:309/M:42\n",
-      "sel #2/D:109/D:110/D:212/D:214/D:216/D:223/D:224/D:225/D:226/D:229/D:230/D:231/D:232/D:233/D:53/D:56/D:59/D:61/D:62/D:63/D:64/D:65/D:66/D:67/D:68/D:74/D:76/D:78/D:80/D:82/D:83/D:84/D:85/D:86/D:87/D:88/D:91/D:95/D:96/D:99/H:108/H:109/H:136/H:137/H:138/H:140/H:141/H:144/H:145/H:148/H:150/H:151/H:152/H:155/H:161/H:171/H:172/H:173/H:174/H:177/H:178/H:236/H:240/H:242/H:243/H:244/H:246/H:247/H:260/H:261/H:263/H:265/H:266/H:267/H:291/H:292/H:308/H:310/H:42\n"
+      "sel #1/A:109/A:142/A:145/A:146/A:148/A:149/A:150/A:151/A:154/A:155/A:157/A:158/A:161/A:162/A:163/A:166/A:170/A:19/A:44/A:55/A:56/A:57/A:58/A:60/A:61/A:62/A:65/A:66/A:68/A:69/A:71/A:72/A:73/A:75/A:76/A:79/A:80/A:83/A:84/C:1/C:4/C:5\n",
+      "sel #2/A:109/A:142/A:145/A:146/A:148/A:149/A:150/A:151/A:154/A:155/A:157/A:158/A:161/A:162/A:163/A:166/A:170/A:19/A:44/A:55/A:56/A:57/A:58/A:60/A:61/A:62/A:65/A:66/A:68/A:69/A:71/A:72/A:73/A:75/A:76/A:79/A:80/A:83/A:84/C:1/C:4/C:5\n"
      ]
     }
    ],
    "source": [
-    "cmd1, cmd2 = gerar_selecoes_chimerax(\"data/tests_chikv/graph_chikv_mayv_teste.json\", '2', '1')\n",
+    "cmd1, cmd2 = gerar_selecoes_chimerax(\"data/tests_titin_mage/graph_titin_mage_teste.json\", '1', '1')\n",
     "print(cmd1)\n",
     "print(cmd2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sel #1/A:109/A:142/A:145/A:146/A:148/A:149/A:150/A:151/A:154/A:155/A:157/A:158/A:161/A:162/A:166/A:19/A:44/A:55/A:56/A:57/A:58/A:60/A:61/A:62/A:65/A:68/A:69/A:72/A:73/A:75/A:76/A:79/A:80/A:83/A:84\n",
+      "sel #2/A:109/A:142/A:145/A:146/A:148/A:149/A:150/A:151/A:154/A:155/A:157/A:158/A:161/A:162/A:166/A:19/A:44/A:55/A:56/A:57/A:58/A:60/A:61/A:62/A:65/A:68/A:69/A:72/A:73/A:75/A:76/A:79/A:80/A:83/A:84\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmd1, cmd2 = gerar_selecoes_chimerax(\"data/tests_flu_mage/graph_flu_mage.json\", '1', '1')\n",
+    "print(cmd1)\n",
+    "print(cmd2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comandos = gerar_selecoes_chimerax(\"data/tests_spyke_mage/graph_spyke_mage.json\", '2', '1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sel #1/A:19/A:56/A:57/A:58/A:60/A:61/A:68/A:69/A:71/A:72/A:73/A:75/A:79/A:80/A:83/A:84',\n",
+       " 'sel #2/A:19/A:56/A:57/A:58/A:60/A:61/A:68/A:69/A:71/A:72/A:73/A:75/A:79/A:80/A:83/A:84']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comandos"
    ]
   },
   {
